syntax.output
State 27 conflicts: 3 shift/reduce
State 32 conflicts: 2 shift/reduce
State 42 conflicts: 11 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 11 shift/reduce
State 87 conflicts: 4 shift/reduce
State 117 conflicts: 4 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT OptTag LC error RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC DefList StmtList
   29       | LC error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | RETURN error SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | WHILE LP Exp RP RedundantRP Stmt
   40     | WHILE LP error RP Stmt
   41     | IF LP error RP Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | IF LP Exp RP error ELSE Stmt
   44     | IF LP error RP error ELSE Stmt
   45     | error SEMI

   46 RedundantRP: RP RedundantRP
   47            | RP

   48 RedundantLP: LP RedundantLP
   49            | LP

   50 DefList: Def DefList
   51        | %empty

   52 Def: Specifier DecList SEMI
   53    | Specifier DecList error SEMI

   54 DecList: Dec
   55        | Dec COMMA DecList

   56 Dec: VarDec
   57    | INT
   58    | FLOAT
   59    | VarDec ASSIGNOP Exp

   60 Exp: Exp ASSIGNOP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | LP RedundantLP Exp RP
   70    | MINUS Exp
   71    | NOT Exp
   72    | ID LP Args RP
   73    | ID LP RP
   74    | Exp LB Exp RB
   75    | Exp DOT ID
   76    | ID
   77    | INT
   78    | FLOAT
   79    | LP error RP
   80    | ID LP error RP
   81    | Exp LB error RB
   82    | error ID

   83 Args: Exp COMMA Args
   84     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 14 21 29 35 40 41 42 43 44 45 53 79 80 81 82
SEMI (258) 4 5 7 8 32 34 35 45 52 53
COMMA (259) 10 24 55 83
LC (260) 13 14 27 28 29
RC (261) 13 14 27 29
TYPE (262) 11
ID (263) 16 18 19 22 23 72 73 75 76 80 82
INT (264) 20 57 77
FLOAT (265) 58 78
RETURN (266) 34 35
IF (267) 36 37 41 42 43 44
WHILE (268) 38 39 40
STRUCT (269) 13 14 15
ASSIGNOP (270) 59 60
OR (271) 62
AND (272) 61
RELOP (273) 63
PLUS (274) 64
MINUS (275) 65 70
STAR (276) 66
DIV (277) 67
NOT (278) 71
LP (279) 22 23 36 37 38 39 40 41 42 43 44 48 49 68 69 72 73 79 80
RP (280) 22 23 36 37 38 39 40 41 42 43 44 46 47 68 69 72 73 79 80
LB (281) 20 21 74 81
RB (282) 20 21 74 81
DOT (283) 75
LOWER_THAN_ELSE (284)
ELSE (285) 37 42 43 44


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 26 52 53
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 14
Tag (39)
    on left: 18, on right: 15
VarDec (40)
    on left: 19 20 21, on right: 9 10 20 21 26 56 59
FunDec (41)
    on left: 22 23, on right: 6
VarList (42)
    on left: 24 25, on right: 22 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27 28 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 27 28 30
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right: 30
    36 37 38 39 40 41 42 43 44
RedundantRP (47)
    on left: 46 47, on right: 39 46
RedundantLP (48)
    on left: 48 49, on right: 48 69
DefList (49)
    on left: 50 51, on right: 13 27 28 50
Def (50)
    on left: 52 53, on right: 50
DecList (51)
    on left: 54 55, on right: 52 53 55
Dec (52)
    on left: 56 57 58 59, on right: 54 55
Exp (53)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81 82, on right: 32 34 36 37 38 39 43 59 60 61 62 63 64
    65 66 67 68 69 70 71 74 75 81 83 84
Args (54)
    on left: 83 84, on right: 72 83


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . OptTag LC error RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    7 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 22


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 23

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 33

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   27 CompSt: LC . DefList StmtList RC
   28       | LC . DefList StmtList
   29       | LC . error RC

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end    reduce using rule 51 (DefList)
    error   [reduce using rule 51 (DefList)]
    LC      reduce using rule 51 (DefList)
    RC      reduce using rule 51 (DefList)
    TYPE    [reduce using rule 51 (DefList)]
    ID      reduce using rule 51 (DefList)
    INT     reduce using rule 51 (DefList)
    FLOAT   reduce using rule 51 (DefList)
    RETURN  reduce using rule 51 (DefList)
    IF      reduce using rule 51 (DefList)
    WHILE   reduce using rule 51 (DefList)
    STRUCT  [reduce using rule 51 (DefList)]
    MINUS   reduce using rule 51 (DefList)
    NOT     reduce using rule 51 (DefList)
    LP      reduce using rule 51 (DefList)
    ELSE    reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   14 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 43


State 30

   52 Def: Specifier . DecList SEMI
   53    | Specifier . DecList error SEMI

    ID     shift, and go to state 37
    INT    shift, and go to state 44
    FLOAT  shift, and go to state 45

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 31

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 32

   50 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    TYPE      [reduce using rule 51 (DefList)]
    STRUCT    [reduce using rule 51 (DefList)]
    $default  reduce using rule 51 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 32


State 33

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 34

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 51


State 35

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 36

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 25 (VarList)


State 37

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 40

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 41

   29 CompSt: LC error . RC

    RC  shift, and go to state 56


State 42

   27 CompSt: LC DefList . StmtList RC
   28       | LC DefList . StmtList

    error   shift, and go to state 57
    LC      shift, and go to state 27
    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66

    $end    reduce using rule 31 (StmtList)
    error   [reduce using rule 31 (StmtList)]
    LC      [reduce using rule 31 (StmtList)]
    RC      reduce using rule 31 (StmtList)
    TYPE    reduce using rule 31 (StmtList)
    ID      [reduce using rule 31 (StmtList)]
    INT     [reduce using rule 31 (StmtList)]
    FLOAT   [reduce using rule 31 (StmtList)]
    RETURN  [reduce using rule 31 (StmtList)]
    IF      [reduce using rule 31 (StmtList)]
    WHILE   [reduce using rule 31 (StmtList)]
    STRUCT  reduce using rule 31 (StmtList)
    MINUS   [reduce using rule 31 (StmtList)]
    NOT     [reduce using rule 31 (StmtList)]
    LP      [reduce using rule 31 (StmtList)]
    ELSE    reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 43

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 44

   57 Dec: INT .

    $default  reduce using rule 57 (Dec)


State 45

   58 Dec: FLOAT .

    $default  reduce using rule 58 (Dec)


State 46

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   56 Dec: VarDec .
   59    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 26

    $default  reduce using rule 56 (Dec)


State 47

   52 Def: Specifier DecList . SEMI
   53    | Specifier DecList . error SEMI

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


State 48

   54 DecList: Dec .
   55        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 54 (DecList)


State 49

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 50

   50 DefList: Def DefList .

    $default  reduce using rule 50 (DefList)


State 51

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 52

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 36


State 54

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 55

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 56

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 57

   45 Stmt: error . SEMI
   82 Exp: error . ID

    SEMI  shift, and go to state 76
    ID    shift, and go to state 77


State 58

   72 Exp: ID . LP Args RP
   73    | ID . LP RP
   76    | ID .
   80    | ID . LP error RP

    LP  shift, and go to state 78

    $default  reduce using rule 76 (Exp)


State 59

   77 Exp: INT .

    $default  reduce using rule 77 (Exp)


State 60

   78 Exp: FLOAT .

    $default  reduce using rule 78 (Exp)


State 61

   34 Stmt: RETURN . Exp SEMI
   35     | RETURN . error SEMI

    error  shift, and go to state 79
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 80


State 62

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP error RP Stmt
   42     | IF . LP error RP Stmt ELSE Stmt
   43     | IF . LP Exp RP error ELSE Stmt
   44     | IF . LP error RP error ELSE Stmt

    LP  shift, and go to state 81


State 63

   38 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP Exp RP RedundantRP Stmt
   40     | WHILE . LP error RP Stmt

    LP  shift, and go to state 82


State 64

   70 Exp: MINUS . Exp

    error  shift, and go to state 83
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 84


State 65

   71 Exp: NOT . Exp

    error  shift, and go to state 83
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 85


State 66

   68 Exp: LP . Exp RP
   69    | LP . RedundantLP Exp RP
   79    | LP . error RP

    error  shift, and go to state 86
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 87

    RedundantLP  go to state 88
    Exp          go to state 89


State 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 68

   27 CompSt: LC DefList StmtList . RC
   28       | LC DefList StmtList .

    RC  shift, and go to state 90

    RC        [reduce using rule 28 (CompSt)]
    $default  reduce using rule 28 (CompSt)


State 69

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    LC      shift, and go to state 27
    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66

    $end    reduce using rule 31 (StmtList)
    error   [reduce using rule 31 (StmtList)]
    LC      [reduce using rule 31 (StmtList)]
    RC      reduce using rule 31 (StmtList)
    TYPE    reduce using rule 31 (StmtList)
    ID      [reduce using rule 31 (StmtList)]
    INT     [reduce using rule 31 (StmtList)]
    FLOAT   [reduce using rule 31 (StmtList)]
    RETURN  [reduce using rule 31 (StmtList)]
    IF      [reduce using rule 31 (StmtList)]
    WHILE   [reduce using rule 31 (StmtList)]
    STRUCT  reduce using rule 31 (StmtList)
    MINUS   [reduce using rule 31 (StmtList)]
    NOT     [reduce using rule 31 (StmtList)]
    LP      [reduce using rule 31 (StmtList)]
    ELSE    reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 91
    Stmt      go to state 69
    Exp       go to state 70


State 70

   32 Stmt: Exp . SEMI
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   74    | Exp . LB Exp RB
   75    | Exp . DOT ID
   81    | Exp . LB error RB

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    OR        shift, and go to state 94
    AND       shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    LB        shift, and go to state 101
    DOT       shift, and go to state 102


State 71

   59 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 83
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 103


State 72

   53 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 104


State 73

   52 Def: Specifier DecList SEMI .

    $default  reduce using rule 52 (Def)


State 74

   55 DecList: Dec COMMA . DecList

    ID     shift, and go to state 37
    INT    shift, and go to state 44
    FLOAT  shift, and go to state 45

    VarDec   go to state 46
    DecList  go to state 105
    Dec      go to state 48


State 75

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 76

   45 Stmt: error SEMI .

    $default  reduce using rule 45 (Stmt)


State 77

   82 Exp: error ID .

    $default  reduce using rule 82 (Exp)


State 78

   72 Exp: ID LP . Args RP
   73    | ID LP . RP
   80    | ID LP . error RP

    error  shift, and go to state 106
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 107

    Exp   go to state 108
    Args  go to state 109


State 79

   35 Stmt: RETURN error . SEMI
   82 Exp: error . ID

    SEMI  shift, and go to state 110
    ID    shift, and go to state 77


State 80

   34 Stmt: RETURN Exp . SEMI
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   74    | Exp . LB Exp RB
   75    | Exp . DOT ID
   81    | Exp . LB error RB
